AtoZ fix spacing on search highlight in css

--- a/includes/css/db-page-bootstrap.css
+++ b/includes/css/db-page-bootstrap.css
@@ -1376,3 +1376,6 @@ letter-spacing: .5px;
 #subject_list_items h2:not(.no-results) {
   display: none !important;
 }
+#content .highlight_list .dbCard mark.highlight{
+  padding: 0;
+}
